feat: Añade configuración de entorno, archivo de configuración centralizado y funcionalidad de búsqueda vulnerable con interbloqueo LDAP-DB.

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+# Configuración de Base de Datos
 DB_IP=127.0.0.1
-NGINX_IP=127.0.0.1
+DB_PORT=3306
+DB_NAME=lab_vulnerable
+DB_USER=webuser
+DB_PASS=web123
+
+# Configuración de Red
+NGINX_IP=192.168.1.56
+ADMIN_IP=127.0.0.1
 LDAP_IP=192.168.1.15
